# dmon

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Dockerfile  README.md  dmon.c  dmon.h  dmon.odin  dmon_extra.h  test-incremental.c  test.c
cmake/: CTestConfig.cmake  Config.cmake.in  MultiCPackConfig.cmake  README.txt  config.h.in
src/: CMakeLists.txt
src/test/: CMakeLists.txt
